Fixed some layout issues for touch screen devices.

--- a/scripts/css/about.css
+++ b/scripts/css/about.css
@@ -56,4 +56,7 @@
     .about-container > .photo-container {
         grid-row: 1;
     }
+    .text-container {
+        text-align: center;
+    }
 }
